Fix: add align items to icon - name card.

--- a/src/styles/boardPage.module.css
+++ b/src/styles/boardPage.module.css
@@ -77,6 +77,7 @@
 .cardTitle{
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .card {
